= ActiveMerchant CHANGELOG

* Remove @response instance variable from BrainTreeGateway [cody]
* Remove unused deal_with_cc method from BogusGateway [cody]
* Remove test_result_from_cc_number completely from ActiveMerchant [cody]
* Don't use billing_address for shipping_address in Realex [cody]
* Update Realex to add support for cvv data. remove test_result_from_cc_number. [cody]
* Update Protx to add support for avs and cvv data. remove test_result_from_cc_number. [cody]
* Include ActiveMerchant::Utils module in test_helper and use generate_unique_id from the module instead of generate_order_id. [cody]
* Update SecurePay tests to check for avs and cvv data. [cody]
* Update SkipJack to add support for avs and cvv data. remove test_result_from_cc_number. [cody]
* Move generate_unique_id to its own module [cody]
* Update Viaklix to add support for avs and cvv data. remove test_result_from_cc_number. Truncate fields to avoid failure [cody]
* Update PSL Card Gateway to add support for avs and cvv data. remove test_result_from_cc_number. [cody]
* Update PlugNPayGateway to support avs and cvv data. Remove test_result_from_cc_number. [cody]
* Update PaymentExpressGateway to remove test_result_from_cc_number. [cody]
* Update PaySecure to remove test_result_from_cc_number. [cody]
* Update NetbillingGateway to support avs and cvv data. Remove test_result_from_cc_number. [cody]
* Replace all usage of :address with :billing_address in test cases [cody]
* Remove sensitive data from NetRegistryGateway responses. Refactor gateway and tests. Remove test_result_from_cc_number. [cody]
* Update VerifiGateway to support avs and cvv data. Remove test_result_from_cc_number. [cody]
* Small refactoring of UsaEpayGateway [cody]
* Update UsaEpayGateway to support avs and cvv data. Remove test_result_from_cc_number. [cody]
* Update TrustCommerce docs now that the gateway falls back to SSL post when tclink isn't available [cody]
* Change ARB to use correct :address1 key for addresses [cody]