@@ -1,5 +1,6 @@
 = ActiveMerchant CHANGELOG
 
+* Remove @response instance variable from CardStreamGateway [cody]
 * Remove @response instance variable from BrainTreeGateway [cody]
 * Remove unused deal_with_cc method from BogusGateway [cody]
 * Remove test_result_from_cc_number completely from ActiveMerchant [cody]
